--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="app/entities/hud/altitude.js"></script>
     <script src="app/entities/hud/speed.js"></script>
     <script src="app/entities/hud/fuel.js"></script>
+    <script src="app/entities/hud/throddle.js"></script>
     <script src="app/entities/ship/shipComponent.js"></script>
     <script src="app/entities/ship/shipEngine.js"></script>
     <script src="app/entities/ship/rocketEngineLevel1.js"></script>
@@ -29,6 +30,7 @@
     <script src="app/entities/ship/ship.js"></script>
     <script src="app/entities/scenery/soil.js"></script>
     <script src="app/entities/scenery/cloud.js"></script>
+    <script src="app/entities/scenery/sky.js"></script>
     <script src="app/entities/scenery/explosions.js"></script>
 
     <script src="app/directors/director.js"></script>
