--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-  <body style="background:#333; text-align:center">
+  <body style="background:#333; text-align:center; margin: 0; padding: 0; scroll: no">
     <script src="Crafty/crafty.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
 
@@ -31,6 +31,8 @@
     <script src="app/entities/scenery/soil.js"></script>
     <script src="app/entities/scenery/cloud.js"></script>
     <script src="app/entities/scenery/sky.js"></script>
+    <script src="app/entities/scenery/sun.js"></script>
+    <script src="app/entities/scenery/glare.js"></script>
     <script src="app/entities/scenery/explosions.js"></script>
 
     <script src="app/directors/director.js"></script>
