--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <script src="app/entities/ship/shipLittleWings.js"></script>
     <script src="app/entities/ship/shipPhase.js"></script>
     <script src="app/entities/ship/ship.js"></script>
+    <script src="app/entities/ship/shipGenerator.js"></script>
+
     <script src="app/entities/scenery/soil.js"></script>
     <script src="app/entities/scenery/cloud.js"></script>
     <script src="app/entities/scenery/sky.js"></script>
