--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="app/components/path.js"></script>
     <script src="app/components/grid.js"></script>
     <script src="app/components/entity.js"></script>
+    <script src="app/components/textList.js"></script>
+    <script src="app/components/multilineText.js"></script>
 
     <script src="app/entities/common/gravity.js"></script>
     <script src="app/entities/hud/hud.js"></script>
