--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <body style="background:#333; text-align:center; margin: 0; padding: 0; scroll: no">
-    <script src="Crafty/crafty.js"></script>
+    <script src="vendors/crafty.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
 
     <script src="app/components/keyListener.js"></script>
